Fixed footer for android

--- a/stylesheets/TaKo.buttons.styl
+++ b/stylesheets/TaKo.buttons.styl
@@ -61,7 +61,7 @@ header
       margin-left 0.05em
       margin-right 0.05em
 
-footer div button
+footer li button
   width 100%
   height inherit
   background-image none
