--- a/stylesheets/TaKo.layouts.styl
+++ b/stylesheets/TaKo.layouts.styl
@@ -2,6 +2,11 @@
   width 100%
   display block
 
+  &:after
+    display block
+    content ""
+    clear both
+
   & > *
     float left
     display inline
