--- a/stylesheets/TaKo.theme.styl
+++ b/stylesheets/TaKo.theme.styl
@@ -51,7 +51,7 @@ footer
   background-color ASIDE
   color COLOR
 
-  & nav > div > button
+  & nav > ul button
     background-color ASIDE
 
   & .counter
