--- a/stylesheets/TaKo.section.styl
+++ b/stylesheets/TaKo.section.styl
@@ -68,21 +68,35 @@ footer
   line-height FOOTER_HEIGHT
 
   & > nav
+    height FOOTER_HEIGHT
     width 100%
-    display -webkit-box
-    display -ms-box
-    display -moz-box
-    display -o-box
-    display box
 
-    box-orient horizontal
-    box-direction normal
-    box-pack justify
-    box-align stretch
-
-    & > *
-      box-flex 1
+    & > ul
+      margin 0
+      padding 0
+      line-height FOOTER_HEIGHT
+      height FOOTER_HEIGHT
+      list-style none
       width 100%
+      display -webkit-box
+      display -ms-box
+      display -moz-box
+      display -o-box
+      display box
+
+      box-orient horizontal
+      box-direction normal
+      box-pack justify
+      box-align stretch
+
+      & > li
+        box-flex 1
+        width 100%
+
+        & > *
+          width 100%
+          line-height FOOTER_HEIGHT
+          height FOOTER_HEIGHT
 
       &.active
         background-color rgba(250,250,250,0.15)
