--- a/package/stylesheets/TaKo.css
+++ b/package/stylesheets/TaKo.css
@@ -126,15 +126,16 @@ footer li button .counter{position:relative;top:-1.2000000000000002em;line-heigh
 
 div[data-element="notification"]{position:fixed;top:0;bottom:0;left:0;right:0;display:none;background-color:rgba(0,0,0,0.6);z-index:400;padding-top:50px;padding-left:2em;padding-right:2em;}
 div[data-element="notification"].center{padding-top:0;}
-div[data-element="notification"].center > div.window.show{margin-top:50%}
+div[data-element="notification"].center > div.window{margin-top:50%}
 div[data-element="notification"].show{display:block}
-div[data-element="notification"] > div.window{margin-top:200%;color:rgba(0,0,0,0.8);padding:.8em;margin-left:auto;margin-right:auto;opacity:0;max-width:450px;-webkit-transition-duration:500ms;-moz-transition-duration:500ms;-ms-transition-duration:500ms;-o-transition-duration:500ms;transition-duration:500ms;}
+div[data-element="notification"] > div.window{margin-top:570px;color:rgba(0,0,0,0.8);padding:.8em;margin-left:auto;margin-right:auto;opacity:0;max-width:450px;-webkit-transition-duration:500ms;-moz-transition-duration:500ms;-ms-transition-duration:500ms;-o-transition-duration:500ms;transition-duration:500ms;}
 div[data-element="notification"] > div.window:after{display:block;content:"";clear:both}
 div[data-element="notification"] > div.window:not(.center){width:80%;}
+div[data-element="notification"] > div.window:not(.center).show{-webkit-transform:translate(0,-570px);-moz-transform:translate(0,-570px);-ms-transform:translate(0,-570px);-o-transform:translate(0,-570px);transform:translate(0,-570px)}
 div[data-element="notification"] > div.window:not(.center) *{display:block;text-align:left}
 div[data-element="notification"] > div.window:not(.center) > *{display:inline-block}
 div[data-element="notification"] > div.window .icon{display:block;text-align:center;height:100%;line-height:80px;width:80px;font-size:3em;float:left}
-div[data-element="notification"] > div.window.show{margin-top:0;opacity:1}
+div[data-element="notification"] > div.window.show{opacity:1}
 div[data-element="notification"] > div.window.success .title,div[data-element="notification"] > div.window.error .title{padding-top:.3em}
 div[data-element="notification"] > div.window.progress{width:80%;}
 div[data-element="notification"] > div.window.progress .icon{width:100%}
