--- a/package/stylesheets/TaKo.css
+++ b/package/stylesheets/TaKo.css
@@ -37,12 +37,12 @@ header > nav.right > button{margin-right:5px}
 header > nav.left{left:0;}
 header > nav.left > button{margin-left:5px}
 footer{position:fixed;bottom:0;left:0;right:0;width:100%;height:65px;line-height:65px;}
-footer > nav{height:65px;width:100%;}
-footer > nav > ul{margin:0;padding:0;line-height:65px;height:65px;list-style:none;width:100%;display:-webkit-box;display:-ms-box;display:-moz-box;display:-o-box;display:box;-webkit-box-orient:horizontal;-moz-box-orient:horizontal;-ms-box-orient:horizontal;-o-box-orient:horizontal;box-orient:horizontal;-webkit-box-direction:normal;-moz-box-direction:normal;-ms-box-direction:normal;-o-box-direction:normal;box-direction:normal;-webkit-box-pack:justify;-moz-box-pack:justify;-ms-box-pack:justify;-o-box-pack:justify;box-pack:justify;-webkit-box-align:stretch;-moz-box-align:stretch;-ms-box-align:stretch;-o-box-align:stretch;box-align:stretch;}
-footer > nav > ul > li{-webkit-box-flex:1;-moz-box-flex:1;-ms-box-flex:1;-o-box-flex:1;box-flex:1;width:100%;}
-footer > nav > ul > li > *{width:100%;line-height:65px;height:65px}
-footer > nav > ul.active{background-color:rgba(250,250,250,0.15)}
-footer > nav > div{display:block;height:65px;text-align:center}
+footer nav{height:65px;position:fixed;bottom:0;left:0;right:0;}
+footer nav > ul{margin:0;padding:0;line-height:65px;height:65px;list-style:none;position:fixed;bottom:0;left:0;right:0;display:-webkit-box;display:-ms-box;display:-moz-box;display:-o-box;display:box;-webkit-box-orient:horizontal;-moz-box-orient:horizontal;-ms-box-orient:horizontal;-o-box-orient:horizontal;box-orient:horizontal;-webkit-box-direction:normal;-moz-box-direction:normal;-ms-box-direction:normal;-o-box-direction:normal;box-direction:normal;-webkit-box-pack:justify;-moz-box-pack:justify;-ms-box-pack:justify;-o-box-pack:justify;box-pack:justify;-webkit-box-align:stretch;-moz-box-align:stretch;-ms-box-align:stretch;-o-box-align:stretch;box-align:stretch;}
+footer nav > ul > li{-webkit-box-flex:1;-moz-box-flex:1;-ms-box-flex:1;-o-box-flex:1;box-flex:1;width:100%;}
+footer nav > ul > li > *{width:100%;line-height:65px;height:65px}
+footer nav > ul.active{background-color:rgba(250,250,250,0.15)}
+footer nav > div{display:block;height:65px;text-align:center}
 article{min-width:100%;width:auto;display:none;padding-top:5px;position:absolute;top:50px;}
 article.active{display:block}
 
