--- a/stylesheets/TaKo.section.styl
+++ b/stylesheets/TaKo.section.styl
@@ -67,9 +67,12 @@ footer
   height FOOTER_HEIGHT
   line-height FOOTER_HEIGHT
 
-  & > nav
+  & nav
     height FOOTER_HEIGHT
-    width 100%
+    position fixed
+    bottom 0
+    left 0
+    right 0
 
     & > ul
       margin 0
@@ -77,7 +80,10 @@ footer
       line-height FOOTER_HEIGHT
       height FOOTER_HEIGHT
       list-style none
-      width 100%
+      position fixed
+      bottom 0
+      left 0
+      right 0
       display -webkit-box
       display -ms-box
       display -moz-box
