--- a/stylesheets/TaKo.buttons.styl
+++ b/stylesheets/TaKo.buttons.styl
@@ -61,10 +61,11 @@ header
       margin-left 0.05em
       margin-right 0.05em
 
-footer li button
-  width 100%
+footer button
   height inherit
+  width 100%
   background-image none
+  background-color rgba(0, 0, 0, 0)
 
   & .counter
     position relative
