--- a/stylesheets/TaKo.notifications.styl
+++ b/stylesheets/TaKo.notifications.styl
@@ -62,6 +62,8 @@ div[data-element="notification"]
       opacity 1
 
     &.success, &.error
+      border-style solid
+      border-width 0 0 0 4px
 
       & .title
         padding-top 0.3em
