--- a/stylesheets/TaKo.base.styl
+++ b/stylesheets/TaKo.base.styl
@@ -110,3 +110,8 @@ div[data-element="aside_background"]
     height inherit
     display block
     transition-duration PROGRESSBAR_TRANSITION_TIME
+
+.clear:after
+  display block
+  content ""
+  clear both
