--- a/stylesheets/TaKo.notifications.styl
+++ b/stylesheets/TaKo.notifications.styl
@@ -77,11 +77,13 @@ div[data-element="notification"]
       display block
       text-align center
       height 100%
-      line-height 80px
       width 80px
       font-size 3em
       float left
       margin-right 0.2em
+
+    &:not(.progress) .icon
+      line-height 80px
 
     &.show
       opacity 1
