--- a/stylesheets/TaKo.section.styl
+++ b/stylesheets/TaKo.section.styl
@@ -25,6 +25,7 @@ header
   left 0
   right 0
   height HEADER_HEIGHT
+  line-height HEADER_HEIGHT
   width 100%
   z-index HEADER_INDEX
 
@@ -35,10 +36,10 @@ header
     text-align center
     width 100%
     left 0
+    margin-top 0
     z-index HEADER_H1_INDEX
 
   & > nav
-    margin-top 5px
     position fixed
     z-index HEADER_NAV_INDEX
 
