--- a/stylesheets/TaKo.theme.styl
+++ b/stylesheets/TaKo.theme.styl
@@ -30,6 +30,7 @@ body
   background-color BACKGROUND
 
 header
+  background-color THEME
   background-image -webkit-linear-gradient(lighten(THEME, 35%), THEME)
   background-image -moz-linear-gradient(lighten(THEME, 35%), THEME)
   background-image -ms-linear-gradient(lighten(THEME, 35%), THEME)
