Section positioning on android 2.3

--- a/stylesheets/TaKo.section.styl
+++ b/stylesheets/TaKo.section.styl
@@ -2,9 +2,11 @@ section
   height inherit
   width inherit
   position absolute
+  margin 0
   z-index 0
   top 0
   left 0
+  bottom 0
   opacity 0
 
   transition-duration SECTION_TRANSITION_TIME
